--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </li>
 
         <li>
-          <a href="https://www.tiktok.com/@vih_ste10" target="_blank"
-            >tiktok da minha mulher</a
+          <a href="https://www.linkedin.com/in/kevin-eduardo-da-silva-229b64279/" target="_blank"
+            >Meu linkedin</a
           >
         </li>
       </ul>
