--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/aavatar.png" alt="foto do kevin de smolking" />
+        <img src="./assets/aavatar.png" alt="foto de smolking" />
         <p>@kevin_edu23</p>
       </div>
 
